# credex

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml  README.md  docker-compose.yml
backend/migrations/2023-02-06-143933_create_clients/: up.sql
backend/migrations/2023-02-06-143933_create_users/: up.sql
backend/migrations/2023-03-28-114800_create_transactions/: up.sql
backend/migrations/2023-04-12-090631_create_account/: down.sql  up.sql
backend/src/: error.rs  lib.rs  main.rs  prelude.rs
backend/src/db/: actors.rs  db.rs  db_models.rs  db_utils.rs  insertables.rs  messages.rs  mod.rs  schema.rs
backend/src/server/: mod.rs
backend/src/server/extractors/: mod.rs
backend/src/server/handlers/: mod.rs  user_handler.rs
backend/src/server/handlers/clients/: clt_controler.rs  clt_mapper.rs  clt_responses.rs  clt_routes.rs  clt_service.rs  mod.rs
backend/src/server/handlers/trx/: mod.rs  trx_controlers.rs  trx_routes.rs  trx_service.rs
backend/src/utils/: README.md  macros.rs
backend/src/utils/import/: import.surql
common/: Cargo.toml
common/src/: lib.rs
common/src/responses/: clt_responses.rs  mod.rs
frontend/: Cargo.toml  index.html  package-lock.json  tailwind.config.js
frontend/src/: api.rs  bank.rs  main.rs  router.rs
frontend/src/components/: form_input.rs  mod.rs  navigation_bar.rs  user_info.rs
frontend/src/pages/: home_page.rs  login_page.rs  mod.rs  user_page.rs
frontend/styles/: tailwind.css
src/: main.rs
src/db/: actors.rs  db_models.rs  db_utils.rs  insertables.rs  messages.rs  mod.rs  schema.rs
src/server/handlers/: user_handler.rs
src/server/models/: mod.rs  trasnsaction.rs  user.rs
