[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.0", features = ["full"] }
axum = "0.6.14"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.0" }                                            #, features = ["postgres", "r2d2", "chrono"] 
deadpool = "0.9.5"
dotenvy = "0.15"
chrono = { version = "0.4.19", features = ["serde"] }
bson = { version = "2", features = ["chrono-0_4"] }
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
deadpool-runtime = { version = "0.1.2", features = ["tokio_1"] }
url = { version = "2.3.1", features = ["serde"] }
common = { path = "../common" }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
