[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.0", features = ["full"] }
axum = "0.6.14"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
url = { version = "2.3.1", features = ["serde"] }
common = { path = "../common", features = ["back"] }
surrealdb = "1.0.0-beta.8"
thiserror = "1"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde"] }


[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
